--- a/css/header.css
+++ b/css/header.css
@@ -11,3 +11,28 @@
 }
 
 
+.icons {
+  color: #fff;
+  font-size: 25px;
+  text-align: center;
+  
+
+}
+
+.icons-color {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+  transition: font-size ease .5;
+
+}
+
+.icons-color:hover {
+  text-decoration: none;
+  color: grey;
+  font-size: 30px;
+  
+}
+
+
