--- a/projetos/fun-weather/assets/css/header.css
+++ b/projetos/fun-weather/assets/css/header.css
@@ -28,21 +28,22 @@ h1 {
 }
 
 @media (min-width: 320px) and (max-width: 479px) { 
+  
   .get-the-most-text {
-    margin: 78px 0 0 0;
+    margin: 78px 100px 0 0;
     color: #fff;
   }
   
   .h1, h1 {
-    font-size: 23px;
+    font-size: 22px;
   }
   .p-texto {
     padding: 0 0;
-    font-size: 9px;
+    font-size: 8px;
   }
   
   .btn-group-lg > .btn, .btn-lg { 
-    padding: 6px 14px;
+    padding: 6px 12px;
     font-size: 14px;
     line-height: 1.3333333;
     border-radius: 6px;
@@ -52,6 +53,7 @@ h1 {
 }
 
 @media (min-width: 480px) and (max-width: 767px) { 
+    
   .get-the-most-text {
     margin: 105px 0 0 15px;
     color: #fff;
@@ -60,11 +62,7 @@ h1 {
   .h1, h1 {
     font-size: 23px;
   }
-  .p-texto {
-    padding: 0 0;
-    font-size: 9px;
-  }
-  
+
   .btn-group-lg > .btn, .btn-lg { 
     padding: 6px 14px;
     font-size: 14px;
@@ -81,4 +79,11 @@ h1 {
     margin: 181px 0 0 90px;
     color: #fff;
   }
+
+  .p-texto {
+
+    padding:20px 0;
+    font-size: 15px;
+
+}
 }
