deploy projeto fun-weather section widgets, What people are saying, downlods

--- a/projetos/fun-weather/assets/css/screenshot.css
+++ b/projetos/fun-weather/assets/css/screenshot.css
@@ -1,12 +1,12 @@
-#screenshot {
+/* #screenshot {
   
   background-image: url(../img/bg-screenshot.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  height: 2735px;
+  height: 2535px;
   
-}
+} */
 
 .screenshot-title h2 {
 
