--- a/projetos/fun-weather/assets/css/feature.css
+++ b/projetos/fun-weather/assets/css/feature.css
@@ -1,11 +1,11 @@
-#feature {
+/* #feature {
   
   background-image: url(../img/bg-feature.jpg);
   background-size: auto;
   background-position: top center;
-  height: 100%;
+  height: 600px;
   
-}
+} */
 
 .feature {
   padding: 100px 0;
