--- a/projetos/fun-weather/assets/css/header.css
+++ b/projetos/fun-weather/assets/css/header.css
@@ -2,7 +2,7 @@ header {
   background-image: url(../img/bg-header.jpg);
   background-size: cover;
   background-position: top center;
-  height: 100%;
+  height: 100vh;
 }
 
 .get-the-most-text {
