--- a/projetos/fun-weather/assets/css/style.css
+++ b/projetos/fun-weather/assets/css/style.css
@@ -2,10 +2,11 @@ html,
 body {
   height: 100%;
   font-family: 'Open Sans', sans-serif;
+  background-color: white;
 }
 
 
-#simple-widgets {
+/* #simple-widgets {
 
   background-image: url(../img/bg-simple-widgets.jpg);
   background-size: auto;
@@ -13,174 +14,35 @@ body {
   background-position: top center;
   height: 938px;
 
-}
+} */
 
-#screenshot {
-  
-  background-image: url(../img/bg-screenshot.jpg);
-  background-size: cover;
+/* #download {
+  background-image: url(../img/bg-download.jpg);
+  background-size: auto;
   background-repeat: no-repeat;
   background-position: top center;
-  height: 2735px;
-  
+} */
+
+.download {
+  background-color: #648cff;
+  clear: both;
 }
 
-.screenshot-title h2 {
-
-  color: #648cff;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 28px;
-
+.list-icons {
+  display: inline-block;
 }
 
-.screenshot-text {
-  font-size: 18px;
-
+.swiper-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-
-.conteudo-01 {
-  padding: 106px 0px 0px 220px;
-}
-
-.conteudo-02 {
-  padding: 125px 0px 0 30px;
-}
-
-.conteudo-03 {
-  padding: 136px 0px 0px 153px;
-}
-
-
-@media (min-width: 320px) and (max-width: 479px) { 
- 
-  .screenshot-title h2 {
-
-    color: #648cff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 25px;
-  
-  }
-  
-  .screenshot-text {
-    font-size: 14px;
-  
-  }
-  
-  .conteudo-01 {
-    padding: 37px 0px 0px 0;
-    text-align: center;
-    
-}
-  
-  .conteudo-02 {
-    padding: 45px 0px 22px 0;
-    text-align: center;
-
-  }
-  
-  .conteudo-03 {
-    padding: 82px 0px 0 0px;
-    text-align: center;
-  }
-
-  .centralizar {
-    margin: 0 auto;
-  }
-  
-  .tamanho-device {
-    max-width: 310px;
-  }
-}
-
-@media (min-width: 480px) and (max-width: 767px) { 
-  
-  .screenshot-title h2 {
-
-    color: #648cff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 25px;
-  
-  }
-  
-  .screenshot-text {
-    font-size: 14px;
-  
-  }
-  
-  .conteudo-01 {
-    padding: 37px 0px 0px 0;
-    text-align: center;
-    
-}
-  
-  .conteudo-02 {
-    padding: 45px 0px 22px 0;
-    text-align: center;
-
-  }
-  
-  .conteudo-03 {
-    padding: 82px 0px 0 0px;
-    text-align: center;
-  }
-
-  .centralizar {
-    margin: 0 auto;
-  }
-  
-  .tamanho-device {
-    max-width: 310px;
-  }
-
-}
-
-@media (min-width: 768px) and (max-width: 992px) { 
-  .screenshot-title h2 {
-
-    color: #648cff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 25px;
-  
-  }
-  
-  .screenshot-text {
-    font-size: 14px;
-  
-  }
-  
-  .conteudo-01 {
-    padding: 37px 0px 0px 0;
-    text-align: center;
-    
-}
-  
-  .conteudo-02 {
-    padding: 45px 0px 22px 0;
-    text-align: center;
-
-  }
-  
-  .conteudo-03 {
-    padding: 82px 0px 0 0px;
-    text-align: center;
-  }
-
-  .centralizar {
-    margin: 0 auto;
-  }
-  
-  .tamanho-device {
-    max-width: 310px;
-  }
-  
+.swiper-slide {
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 659px;
 }
 
 
