--- a/projetos/fun-weather/assets/css/style.css
+++ b/projetos/fun-weather/assets/css/style.css
@@ -6,10 +6,22 @@ body {
 }
 
 
+.widgets-title h2 {
+  text-align: center;
+  color: #648cff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 28px;
+  padding-top: 100px;
+}
 
-
-
-
+.widgets-text {
+  text-align: center;
+  color: #c3c3c3;
+  font-size: 15px;
+  margin: 0 auto;
+}
 
 .swiper-container {
   width: 100%;
@@ -22,6 +34,33 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 659px;
+}
+
+
+.footer{
+ 
+}
+
+.footer, .bg-black {
+  background-color: #353854;
+  height: 250px;
+  padding-top: 50px;
+}
+
+.text-footer {
+  color: #565b87;
+  text-align: right;
+}
+
+hr {  
+  margin-top: 34px;
+  margin-bottom: 49px;
+  border: 0;
+  border-top-color: currentcolor;
+  border-top-style: none;
+  border-top-width: 0px;
+  border-top: 1px solid #565b87;
+  
 }
 
 
