projeto fun-weather ajuste navbar e footer

--- a/projetos/fun-weather/assets/css/style.css
+++ b/projetos/fun-weather/assets/css/style.css
@@ -37,13 +37,15 @@ body {
 }
 
 
-.footer{
- 
+footer{
+  background-color: #353854;
+  height: auto;
+  padding-top: 50px;
 }
 
 .footer, .bg-black {
   background-color: #353854;
-  height: 250px;
+
   padding-top: 50px;
 }
 
